--- a/codeacademy/modules02_work_around/02_test.html
+++ b/codeacademy/modules02_work_around/02_test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <script type="module" src="workAround.js"></script>
+  <script type="module" src="01_workAround.js"></script>
 </head>
 <body>
 
